Update 16s sequencing scripts

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,8 +26,8 @@ This repository is a shared resource for us to play about with data and share me
   - [ ] Bought primers uploaded
 - [x] Samples 16S sequenced **(May 2021)**
   - [x] Processed data uploaded
-  - [ ] Analysis scripts uploaded
-  - [ ] Clustering analysis to look at habitat separation and potential definitions
+  - [x] Analysis scripts uploaded
+  - [x] Clustering analysis to look at habitat separation and potential definitions
   - [ ] Data archived and backed up
 - [ ] Samples amplicon sequenced to amplify rpoB gene **(October 2021)**
   - [ ] Processed data uploaded
@@ -46,6 +46,7 @@ I have avoided uploading overly large files to this repository for obvious reaso
 **data** includes the processed data from each part of the project. `sequencing_16s` contains the data for the 16s sequencing etc.
 
 - **metadata.csv** - completed metadata for each sample
+- **sample_cluster_assignments.csv** - cluster assignments for each sample based on 16S clustering.
 - **sequencing 16s** - folder containing data from the 16s sequencing
 1. `ps_16s_complete.rds` - the original phyloseq object from the processing pipeline
 2. `ps_16s_prev_filtered.rds` - low abundance and low prevalence ASVs removed
@@ -58,10 +59,10 @@ I have avoided uploading overly large files to this repository for obvious reaso
 
 - **sequencing_16s**
     
-1. `prevalence_filtering.R`
-2. `rarefy_data.R`
-3. `first_clustering.R`
-4. `second_clustering.R`
+1. `prevalence_filtering.R` - removes low prevalence ASVs
+2. `rarefy_data.R` - rarefies data and sets root to tree
+3. `first_clustering.R` - runs initial PCoA plot to look at differences between habitats
+4. `second_clustering.R` - runs cleaned PCoA and clustering analysis to identify habitat clusters in the data.
   
 - **sequencing_rpoB**
 
