--- a/README.Rmd
+++ b/README.Rmd
@@ -52,6 +52,9 @@ I have avoided uploading overly large files to this repository for obvious reaso
 2. `ps_16s_prev_filtered.rds` - low abundance and low prevalence ASVs removed
 3. `ps_16s_low_depth_removed.rds` - low depth samples removed **no samples were too low here**
 4. `ps_16s_rarefied.rds` - rarefied samples
+- **sequencing_rpoB** - folder containing data from the rpoB sequencing
+1. `alignments` - folder containing the alignments of myxobacteria reads after clustering at different levels of OTU similarity and prevalence filtering
+2. `raxml` - the trees of each level of OTU similarity. To see the meaning of the output files see the [raxml-ng help page](https://github.com/amkozlov/raxml-ng/wiki/Output:-files-and-settings). Rooted trees (myxo_asv.raxml.bestTreeRooted) were made in R using `ape::root` and has only been done for the asv tree so far. `_LogLik.txt` files show the log likelihood of all the trees outputted by the raxml command.
 
 ### scripts
 
