Update repository and add visualise_phylogeny.R

--- a/README.Rmd
+++ b/README.Rmd
@@ -64,14 +64,17 @@ I have avoided uploading overly large files to GitHub as there is a file size li
             3. **make_tree_ultrametric.R** - makes each tree ultrametric and remove family labels from tree.
             4. **csv2constraint.pl** creates a constraint tree from a csv specifiying groupings and a list of ASVs and their grouping in relation to the constraint tree.
             5. **extend_labels.pl** adds the family name onto the tip label for the tree to make rooting in FigTree easier.
-        - The order of the analysis scripts is as follows.
-            
-        3.
-        4.
-        5.
-        6.
-        7.
-    -
+        - The order of the analysis scripts is as follows:
+            1. **estimate_phylogenetic_signal_all.R** estimates the phylogenetic signal of biome preference at each OTU similarity cut-off.
+            2. **visualise_phylogenetic_signal.R** recreates **Figure S4**.
+            3. **plot_phylogeny.R** plots the phylogeny and groups some biome preferences together. Recreates **Figure 2**.
+            4. **diversitree_mk_models.R** fits the Markov models looking at biome preference transitions. Recreates **Figure 3**, **Table 1**, **Figure S5**, **Figure S6**, **Table S2**.
+            5. **post_bamm_analysis.R** analyses the output of BAMM. Recreates **Figure 4**.
+            6. **diversitree_musse_models.R** fits MuSSE models using diversitree.
+            7. **check_fixed_transition_rates.R** looks at the impact on parameter estimates of fixing some transition rates in the fitting of models using secsse.
+            6. **fit_secsse_*_start_vals** finds the maximum likelihood of potential start values for the musse, muhisse, ctd2, ctd3, and ctd4 models fit using secsse.
+            7. **fit_secsse_*_v2.R** fits the musse, muhisse, ctd2, ctd3, and ctd4 models using secsse.
+            8. **seccse_model_compare.R** compares the musse, muhisse, ctd2, ctd3, and ctd4 models fit with secsse. Recreates **Table 2** and **Table S3**.
 - `misc` contains some miscellaneous scripts that are not used much in the final analysis.
     - **sampling_sites.R** makes **Table_S1** and saves a map out that is used in **Figure_1.R** to make Figure 1.
     - all other scripts are not used in the final analyses and are not of particular importance.
@@ -87,33 +90,3 @@ I have avoided uploading overly large files to GitHub as there is a file size li
     - **map_legend.rds** - saved legend used to create **Figure 1**.
     - **map.rds** - saved plot used to create **Figure 1**.
     - **rough_manuscript_plots.ppt** - rough slides planning out the figures for the manuscript.
-
-
-
-
-
-- **sequencing 16s** - folder containing data from the 16s sequencing
-1. 
-2. `ps_16s_prev_filtered.rds` - low abundance and low prevalence ASVs removed
-3. `ps_16s_low_depth_removed.rds` - low depth samples removed **no samples were too low here**
-4. `ps_16s_rarefied.rds` - rarefied samples
-- **sequencing_rpoB** - folder containing data from the rpoB sequencing
-1. `alignments` - folder containing the alignments of myxobacteria reads after clustering at different levels of OTU similarity and prevalence filtering
-2. `raxml` - the trees of each level of OTU similarity. To see the meaning of the output files see the [raxml-ng help page](https://github.com/amkozlov/raxml-ng/wiki/Output:-files-and-settings). Rooted trees (myxo_asv.raxml.bestTreeRooted) were made in R using `ape::root` and has only been done for the asv tree so far. `_LogLik.txt` files show the log likelihood of all the trees outputted by the raxml command.
-
-### scripts
-
-**scripts** includes the scripts from each part of the project so far. `sequencing_16s` contains the scripts for the 16s sequencing etc. At the top of each script there is a summary of what has been done in each script. Order of scripts to be run is the same as numbered here.
-
-- **sequencing_16s**
-    
-1. `prevalence_filtering.R` - removes low prevalence ASVs
-2. `rarefy_data.R` - rarefies data and sets root to tree
-3. `first_clustering.R` - runs initial PCoA plot to look at differences between habitats
-4. `second_clustering.R` - runs cleaned PCoA and clustering analysis to identify habitat clusters in the data.
-  
-- **sequencing_rpoB**
-
-### plots
-
-**plots** includes the plots from each part of the project so far. `sequencing_16s` contains the plots for the 16s sequencing etc.
