update Readme and diversitree script

--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 
 ## Summary
 
-This repository contains the processed data and scripts used to investigate the macroevolution of Myxobacteria in natural environments. The repository has evolved through the project and now contains the processed data and scripts used to recreate the analyses and figures in the manuscript (as it is now). In some instances where the code to run an analysis (e.g. for running BAMM) is not available here, we have tried our best to highlight where that is the case. 
+This repository contains the processed data and scripts used to investigate the macroevolution of Myxobacteria in natural environments. The repository has evolved through the project and now contains the processed data and scripts used to recreate the analyses and figures in the manuscript (as it is now). In some instances where the code to run an analysis (e.g. for running BAMM) is not available here, we have tried our best to highlight where that is the case.
 
 ## To use
 
@@ -27,66 +27,66 @@ I have avoided uploading overly large files to GitHub as there is a file size li
 
 ### data
 
-**data** includes the processed data from each part of the project. 
+**data** includes the processed data from each part of the project.
 
-- `sequencing_16s` contains the data for the 16s sequencing
-    - The first dataset to be read in is **ps_16s_complete.rds**, this is the original phyloseq object from the processing pipeline. All other data files are produced from the scripts outlined below.
-- `sequencing_rpoB` contains the data for the rpoB sequencing
-    - The first dataset to be read in is **phyloseq/myxococcus/ps_phyloseq_myxo.rds**. This is the dataset of the phyloseq object after filtering has been done to only retain ASVs that are assigned to the Myxbacteria. All other data files are produced from this first dataset and the scripts outlined below.
-- in the base folder there are some data files that are used across analyses
-    - **metadata.csv** - completed metadata for each sample
-    - **Supplemental Table 1 - Sampling.xlsx** - information on sampling sites used in **Table S1**.
+-   `sequencing_16s` contains the data for the 16s sequencing
+    -   The first dataset to be read in is **ps_16s_complete.rds**, this is the original phyloseq object from the processing pipeline. All other data files are produced from the scripts outlined below.
+-   `sequencing_rpoB` contains the data for the rpoB sequencing
+    -   The first dataset to be read in is **phyloseq/myxococcus/ps_phyloseq_myxo.rds**. This is the dataset of the phyloseq object after filtering has been done to only retain ASVs that are assigned to the Myxbacteria. All other data files are produced from this first dataset and the scripts outlined below.
+-   in the base folder there are some data files that are used across analyses
+    -   **metadata.csv** - completed metadata for each sample
+    -   **Supplemental Table 1 - Sampling.xlsx** - information on sampling sites used in **Table S1**.
 
 ### scripts
 
 **scripts** includes the scripts to analyse the processed datasets.
 
-- `sequencing_16s` contains the scripts used to analyse the 16s data.
-    - The order of running the scripts is:
-        1. **prevalence_filtering.R** - removes low prevalence ASVs
-        2. **rarefy_data.R** - rarefies data and sets the root of the tree for the 16s data
-        3. **first_clustering.R** - runs initial PCoA plot to look at differences between pre-defined habitats using permutational ANOVAs 
-        4. **second_clustering.R** - runs PCoA on data with three pre-defined habitats removed and does clustering analysis to identify biome clusters. Saves out plots that are used in **Figure_1.R** to make **Figure 1**.
-    - **extra_functions.R** contains extra functions used in the other scripts.
-- `sequencing_rpoB` contains the scripts used to analyse the rpoB data.
-    - The scripts in `processing` and `tree_building` can be run, then followed by the scripts in `analysis`.
-        - The order of the processing scripts is as follows:
-            1. **remove_mmseqs_nonmyxo.R** - removes ASVs from the rpoB dataset that are not assigned to Myxobacteria in both MMSeqs2 and the naive bayesian classifier used by dada2.
-            2. **asvs_to_otus.R** - does prevalence filtering on the rpoB Myxobacteria dataset, creates a sequence alignment of the ASV dataset and then creates new datasets at different levels of OTU similarity.
-            3. **assign_habitat_preference_all.R** - assigns biome preference to each ASV in each OTU similarity cut-off dataset.
-            4. **align_myxo.R** - creates a sequence alignment for each Myobacteria dataset across each OTU similarity and creates a backbone tree for that alignment using **tree_processing/csv2constraint.pl**.
-            5. **rarefaction_curves.R** - creates rarefaction curves from the Myxobacteria dataset created at the end of **remove_mmseqs_nonmyxo.R**. Recreates **Figure S1**.
-            6. **check_habitat_proportions.R** looks at how many ASVs are in each biome preference across different OTU similarity cut-offs. Recreates **Figure S2**.
-            7. **check_myxo_clustering.R** runs a PCoA on the prevalence filtered Mxyobacteria ASV dataset, looking for clustering of communities based on their different biomes. Recreates **Figure S3**.
-        - The order of the tree building scripts is as follows:
-            1. **run_raxml_many_screens.sh** - runs raxml on all the sequence alignments.
-            2. **append_tiplabels.R** - reads the tree and taxonomic information into R and runs **extend_labels.pl**. Each tree after this step was rooted manually using FigTree. A key step for **chronos()** to work in the next script is to include annotations as Nexus when exporting the tree from FigTree.
-            3. **make_tree_ultrametric.R** - makes each tree ultrametric and remove family labels from tree.
-            4. **csv2constraint.pl** creates a constraint tree from a csv specifiying groupings and a list of ASVs and their grouping in relation to the constraint tree.
-            5. **extend_labels.pl** adds the family name onto the tip label for the tree to make rooting in FigTree easier.
-        - The order of the analysis scripts is as follows:
-            1. **estimate_phylogenetic_signal_all.R** estimates the phylogenetic signal of biome preference at each OTU similarity cut-off.
-            2. **visualise_phylogenetic_signal.R** recreates **Figure S4**.
-            3. **visualise_phylogeny.R** plots the phylogeny and groups some biome preferences together. Recreates **Figure 2**.
-            4. **diversitree_mk_models.R** fits the Markov models looking at biome preference transitions. Recreates **Figure 3**, **Table 1**, **Figure S5**, **Figure S6**, **Table S2**.
-            5. **bamm_analysis.R** analyses the output of BAMM. Recreates **Figure 4**.
-            6. **diversitree_musse_models.R** fits MuSSE models using diversitree.
-            7. **check_fixed_transition_rates.R** looks at the impact on parameter estimates of fixing some transition rates in the fitting of models using secsse.
-            6. **fit_secsse_*_start_vals** finds the maximum likelihood of potential start values for the musse, muhisse, ctd2, ctd3, and ctd4 models fit using secsse.
-            7. **fit_secsse_*_v2.R** fits the musse, muhisse, ctd2, ctd3, and ctd4 models using secsse.
-            8. **seccse_model_compare.R** compares the musse, muhisse, ctd2, ctd3, and ctd4 models fit with secsse. Recreates **Table 2** and **Table S3**.
-- `misc` contains some miscellaneous scripts that are not used much in the final analysis.
-    - **sampling_sites.R** makes **Table_S1** and saves a map out that is used in **Figure_1.R** to make Figure 1.
-    - all other scripts are not used in the final analyses and are not of particular importance.
+-   `sequencing_16s` contains the scripts used to analyse the 16s data.
+    -   The order of running the scripts is:
+        1.  **prevalence_filtering.R** - removes low prevalence ASVs
+        2.  **rarefy_data.R** - rarefies data and sets the root of the tree for the 16s data
+        3.  **first_clustering.R** - runs initial PCoA plot to look at differences between pre-defined habitats using permutational ANOVAs
+        4.  **second_clustering.R** - runs PCoA on data with three pre-defined habitats removed and does clustering analysis to identify biome clusters. Saves out plots that are used in **Figure_1.R** to make **Figure 1**.
+    -   **extra_functions.R** contains extra functions used in the other scripts.
+-   `sequencing_rpoB` contains the scripts used to analyse the rpoB data.
+    -   The scripts in `processing` and `tree_building` can be run, then followed by the scripts in `analysis`.
+        -   The order of the processing scripts is as follows:
+            1.  **remove_mmseqs_nonmyxo.R** - removes ASVs from the rpoB dataset that are not assigned to Myxobacteria in both MMSeqs2 and the naive bayesian classifier used by dada2.
+            2.  **asvs_to_otus.R** - does prevalence filtering on the rpoB Myxobacteria dataset, creates a sequence alignment of the ASV dataset and then creates new datasets at different levels of OTU similarity.
+            3.  **assign_habitat_preference_all.R** - assigns biome preference to each ASV in each OTU similarity cut-off dataset.
+            4.  **align_myxo.R** - creates a sequence alignment for each Myobacteria dataset across each OTU similarity and creates a backbone tree for that alignment using **tree_processing/csv2constraint.pl**.
+            5.  **rarefaction_curves.R** - creates rarefaction curves from the Myxobacteria dataset created at the end of **remove_mmseqs_nonmyxo.R**. Recreates **Figure S1**.
+            6.  **check_habitat_proportions.R** looks at how many ASVs are in each biome preference across different OTU similarity cut-offs. Recreates **Figure S2**.
+            7.  **check_myxo_clustering.R** runs a PCoA on the prevalence filtered Mxyobacteria ASV dataset, looking for clustering of communities based on their different biomes. Recreates **Figure S3**.
+        -   The order of the tree building scripts is as follows:
+            1.  **run_raxml_many_screens.sh** - runs raxml on all the sequence alignments.
+            2.  **append_tiplabels.R** - reads the tree and taxonomic information into R and runs **extend_labels.pl**. Each tree after this step was rooted manually using FigTree. A key step for **chronos()** to work in the next script is to include annotations as Nexus when exporting the tree from FigTree.
+            3.  **make_tree_ultrametric.R** - makes each tree ultrametric and remove family labels from tree.
+            4.  **csv2constraint.pl** creates a constraint tree from a csv specifiying groupings and a list of ASVs and their grouping in relation to the constraint tree.
+            5.  **extend_labels.pl** adds the family name onto the tip label for the tree to make rooting in FigTree easier.
+        -   The order of the analysis scripts is as follows:
+            1.  **estimate_phylogenetic_signal_all.R** estimates the phylogenetic signal of biome preference at each OTU similarity cut-off.
+            2.  **visualise_phylogenetic_signal.R** recreates **Figure S4**.
+            3.  **visualise_phylogeny.R** plots the phylogeny and groups some biome preferences together. Recreates **Figure 2**.
+            4.  **diversitree_mk_models.R** fits the Markov models looking at biome preference transitions. Recreates **Figure 3**, **Table 1**, **Figure S5**, **Figure S6**, **Table S2**.
+            5.  **bamm_analysis.R** analyses the output of BAMM. Recreates **Figure 4**.
+            6.  **diversitree_musse_models.R** fits MuSSE models using diversitree.
+            7.  **check_fixed_transition_rates.R** looks at the impact on parameter estimates of fixing some transition rates in the fitting of models using secsse.
+            8.  **fit_secsse\_\*\_start_vals** finds the maximum likelihood of potential start values for the musse, muhisse, ctd2, ctd3, and ctd4 models fit using secsse.
+            9.  **fit_secsse\_\*\_v2.R** fits the musse, muhisse, ctd2, ctd3, and ctd4 models using secsse.
+            10. **seccse_model_compare.R** compares the musse, muhisse, ctd2, ctd3, and ctd4 models fit with secsse. Recreates **Table 2** and **Table S3**.
+-   `misc` contains some miscellaneous scripts that are not used much in the final analysis.
+    -   **sampling_sites.R** makes **Table_S1** and saves a map out that is used in **Figure_1.R** to make Figure 1.
+    -   all other scripts are not used in the final analyses and are not of particular importance.
 
 ### plots
 
 **plots** contains figures and tables made during the project.
 
-- `manuscript_plots` contains the figures and tables used in the manuscript
-- `sequencing_16s` contains extra figures and tables produced during the analysis of the 16s data
-- `sequencing_rpoB` contains extra figures and tables produced during the analysis of the rpoB data
-- in the base folder there are some files that do not belong to either 16s or rpoB analyses
-    - **map_legend.rds** - saved legend used to create **Figure 1**.
-    - **map.rds** - saved plot used to create **Figure 1**.
-    - **rough_manuscript_plots.ppt** - rough slides planning out the figures for the manuscript.
+-   `manuscript_plots` contains the figures and tables used in the manuscript
+-   `sequencing_16s` contains extra figures and tables produced during the analysis of the 16s data
+-   `sequencing_rpoB` contains extra figures and tables produced during the analysis of the rpoB data
+-   in the base folder there are some files that do not belong to either 16s or rpoB analyses
+    -   **map_legend.rds** - saved legend used to create **Figure 1**.
+    -   **map.rds** - saved plot used to create **Figure 1**.
+    -   **rough_manuscript_plots.ppt** - rough slides planning out the figures for the manuscript.
